--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -23,9 +23,11 @@
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/edit_text_file_name"
-        android:layout_marginTop="16dp" />
+        android:layout_height="700px"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button_choose_image"
+        android:layout_marginTop="11dp" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
