--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="toolbar_item_padding">16dp</dimen>
+    <dimen name="item_vertical_margin">16dp</dimen>
+    <dimen name="dialog_content_horizontal_padding">24dp</dimen>
+    <dimen name="dialog_content_top_padding">20dp</dimen>
+    <dimen name="dialog_content_bottom_padding">24dp</dimen>
 </resources>
