--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,10 +8,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.imagetotext.Login">
+    tools:context="com.example.android.imagetotext.SignUp">
 
     <LinearLayout
-
 
     android:layout_centerHorizontal="true"
     android:layout_centerVertical="true"
@@ -24,7 +23,7 @@
         android:layout_margin="15dp"
         android:inputType="textEmailAddress"
         android:hint="Enter your email"
-        android:id="@+id/enterEmail"
+        android:id="@+id/editEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -32,29 +31,37 @@
         android:layout_margin="15dp"
         android:inputType="textPassword"
         android:hint="Enter your password"
-        android:id="@+id/enterPassword"
+        android:id="@+id/editPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:layout_margin="15dp"
+        android:inputType="textPassword"
+        android:hint="Confirm your password"
+        android:id="@+id/editPasswordConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Button
         android:layout_margin="15dp"
         android:id="@+id/buttonRegister"
-        android:text="Login"
+        android:text="Sign Up"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
     <Button
         android:layout_margin="15dp"
         android:textAlignment="center"
-        android:text="Not Registered? Sign up here"
-        android:id="@+id/registerUser"
+        android:text="Already Registered? Login here"
+        android:id="@+id/LoginPage"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
 </LinearLayout>
 
     <TextView
-        android:text="User Login Here"
+        android:text="New User Signup"
         android:layout_width="238dp"
         android:gravity="center"
         android:layout_height="wrap_content"
