--- a/app/src/main/res/layout/activity_my_groups.xml
+++ b/app/src/main/res/layout/activity_my_groups.xml
@@ -11,43 +11,39 @@
     tools:context="com.example.android.imagetotext.MyGroups">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Groups I am part of"
-            android:layout_gravity="top"
-            />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+
+        android:layout_below="@+id/textView2"
+        android:layout_marginTop="56dp"
+        android:orientation="vertical">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Home"
-            android:id="@+id/Home"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="My Documents"
             android:id="@+id/MyDocuments"
-            />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="My Documents" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/UploadImage"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Upload Image"
-            android:id="@+id/UploadImage"/>
+            android:layout_margin="15dp"
+            android:text="Upload Image" />
+
 
     </LinearLayout>
 
-    </LinearLayout>
+    <TextView
+        android:text="Groups I'm part of"
+        android:layout_width="238dp"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:id="@+id/myGroupsText"
+        android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
