--- a/app/src/main/res/layout/activity_my_groups.xml
+++ b/app/src/main/res/layout/activity_my_groups.xml
@@ -15,10 +15,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/myGroupsText"
         android:layout_marginTop="56dp"
         android:orientation="vertical">
+
+        <Button
+            android:id="@+id/ChooseGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="Your Groups" />
+        <Button
+            android:id="@+id/CreateGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="Create New Group" />
 
         <Button
             android:id="@+id/MyDocuments"
